# pcrio

./: CMakeLists.txt  pcrdef.h  pcrio.c  pcrio.h  winlocalenames.h
cmake/: FindCheck.cmake
tests/: CMakeLists.txt  check_pcrio.c
